# Proyecto

./: README.md
admin/: .gitignore  pyproject.toml
admin/public/css/: carnet.css  config.css  detail.css  error.css  home.css  listing.css  login.css  new.css  payments.css  perfil.css  quota_detail.css  styles.css
admin/public/css/associates/: associated_detail.css  associates.css  edit_associated.css  new_associated.css
admin/public/css/sports/: new_sport.css  sports.css
admin/public/css/users/: new_user.css  user_detail.css  user_update.css  users.css
admin/src/core/: database.py  seeds.py
admin/src/core/associates/: __init__.py  associated.py
admin/src/core/auth/: __init__.py  permission.py  role.py  user.py
admin/src/core/licenses/: __init__.py  license.py
admin/src/core/payments/: __init__.py  paymentV2.py
admin/src/core/quotas/: __init__.py  quotaV2.py
admin/src/core/setting/: __init__.py  setting.py
admin/src/core/sports/: __init__.py  sport.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: api.py  associates.py  auth.py  config.py  estado_societario.py  payments.py  perfil.py  quotas.py  signups.py  sports.py  users.py
admin/src/web/helpers/: auth.py  chart.py  handlers.py  user.py  validate.py
admin/src/web/templates/: config.html  error.html  estado_societario.html  home.html  layout.html
admin/src/web/templates/associates/: associated_detail.html  associated_license.html  associated_sports.html  associates.html  edit_associated.html  new_associated.html  (+1 more)
admin/tests/: test_web.py
portal/: index.html  (+2 more)
(+59 files in other folders)
